k8s-manifests/ad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
      - name: adservice
        image: ijeawele/adservice:v1.0
        ports:
        - containerPort: 9555
