k8s-manifests/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
      - name: checkoutservice
        image: ijeawele/checkoutservice:v1.0
        ports:
        - containerPort: 7070
