k8s-manifests/currency-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
      - name: currencyservice
        image: ijeawele/currencyservice:v1.0
        ports:
        - containerPort: 7000
