k8s-manifests/email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - name: emailservice
        image: ijeawele/emailservice:v1.0
        ports:
        - containerPort: 5001
