k8s-manifests/shopping-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-assistant-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingassistantservice
  template:
    metadata:
      labels:
        app: shoppingassistantservice
    spec:
      containers:
      - name: shoppingassistantservice
        image: ijeawele/shoppingassistantservice:v1.0
        ports:
        - containerPort: 8005
