k8s-manifests/product-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
      - name: productcatalogservice
        image: ijeawele/productcatalogservice:v1.0
        ports:
        - containerPort: 3550

---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  selector:
    app: productcatalogservice
  ports:
  - protocol: TCP
    port: 3550
    targetPort: 3550
  type: ClusterIP
