k8s-manifests/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
      - name: shippingservice
        image: ijeawele/shippingservice:v1.0
        ports:
        - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  selector:
    app: shippingservice
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
